Update the test for NameContainsKeywordsPredicateTest